--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 REACT_APP_STAGE=dev
-LOCAL_IP_ADRESS='http://172.16.0.24/'
+LOCAL_IP_ADRESS='https://api.github.com/'
 PRODUCTION_ADDRESS='https://api.github.com/'
